# nicegui-starter-template

./: CONRIBUTING.md  README.md  pyproject.toml
source/: app.py  zd.py
source/pages/: ping.py
source/static/: index.scss
